# pywayfire

./: MANIFEST.in  README.md  install  pyproject.toml  requirements.txt  setup.py  wayfire.py  waypy.py
.github/workflows/: wayfire-package.yml  wayfire.yml  waypy.json  waypy.yml
scripts/: center-active-view.py  center-cursor.py  cfg.py  dpms_manager.py  event-monitor-glib.py  event-monitor.py  headless.py  inactive-alpha.py  input.py  ipc-bindings.py  ipc-rules-demo.py  list-methods.py  master-stack-tile-layout.py  move-alpha.py  scale-all-outputs.py  session-save.py  set-touch-state.py  test_ipc.py  view-center.py  view-move.py
tests/: test_waypy.py
wayfire/: __init__.py  ipc.py
wayfire/core/: __init__.py  ipc_raw.py  ipc_utils.py  template.py  wayfire_socket.py
wayfire/extra/: features.py  ipc_utils.py  stipc.py  wpe.py
wayfire/tests/: fuzzy.py  gtk3_dialogs.py  gtk3_window.py  gtk4_window.py  layershell.py  wayfire.ini
waypy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
