[project]
name = "wayfire"
version = "2.0"
authors = [{ name = "Thiago", email = "systemofdown@gmail.com" }, { name = "Ilia Bozhinov", email= "ammen99@gmail.com" }]
description = "wayfire compositor library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/WayfireWM/pywayfire"
Issues = "https://github.com/WayfireWM/pywayfire"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
extras = []
